minor UI cleanups, fix text wrap on top title

--- a/catalog/static/css/style.css
+++ b/catalog/static/css/style.css
@@ -9,6 +9,9 @@ body {
 .dashboard-box {
     height: 150px;
 }
+.publication-title {
+    line-height: 1.5em;
+}
 .row-eq-height {
     display: -webkit-box;
     display: -webkit-flex;
